# CrewAI

./: .gitignore  README.md  pyproject.toml  ruff.toml
1_quickstart_with_crewAI/: 1_building_a_web_search_tool_with_crewAI.py  2_when_to_choose_crews.py  3_when_to_choose_flows.py
2_Agentes_AI_vs_Pipelines_AI/: agentes_AI_vs_pipelines_AI.ipynb  app.py
3_rag_agent_with_crewai/: ansi_colors.py  app.py  application.py  config_crewai.py  inspect_chromadb.py  logging_config.py  ui.py
guide_creator_flow/: pyproject.toml
guide_creator_flow/src/guide_creator_flow/: main.py
guide_creator_flow/src/guide_creator_flow/crews/content_crew/: content_crew.py
guide_creator_flow/src/guide_creator_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
guide_creator_flow/src/guide_creator_flow/output/: guide_outline.json
research_crew/: pyproject.toml
research_crew/output/: report.md
research_crew/src/research_crew/: crew.py  main.py
research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
research_crew/src/research_crew/output/: report.md
