[project]
name = "building-agents-with-crewai"
version = "0.1.0"
description = "A CrewAI é uma framework que permite aos desenvolvedores criar e implementar fluxos de trabalho automatizados usando vários agentes de IA que colaboram para executar tarefas complexas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]==0.114.0",
    "crewai-tools==0.40.1",
    "ipykernel>=6.29.5",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
