[project]
name = "building-agents-with-crewai"
version = "0.1.0"
description = "A CrewAI é uma framework que permite aos desenvolvedores criar e implementar fluxos de trabalho automatizados usando vários agentes de IA que colaboram para executar tarefas complexas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai==1.8.1",
    "crewai-tools==1.8.1",
    "fastapi==0.128.0",
    "ipykernel>=7.1.0",
    "langchain-groq==1.1.1",
    "reactpy==1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff==0.14.11",
]

[tool.ruff]
extend = "ruff.toml"
